v0.8.4
======

InputAssistant
--------------

* Dismiss keydown events if their keycode is in lut

v0.8.3
======

Scene
-----

* Added method for removing souls with concrete collision group
* Added method for removing souls with concrete name

v0.8.2
======

Main
----

* Adding sprite to package

v0.8.1
======

Game
----

* Triggering a loading_progress event on assets loading

GUI
---

* Added progress element for handling progress bars

v0.8
====

Game
----

* Added a built-in scene called "loading" for handling loading phase
* Showing built-in view "all" when loading phase ends

GUI
---

* Hiding all views by default

v0.7.2
======

Game
----

* Fixed bug with loadingCallback and FF

RenderAssistant
---------------

* Fixed problems with .style["z-index"] in FF

v0.7.1
======

GUI
---

* Fixed problems with .style["z-index"] in FF

v0.7
====

Game
----

* Using a single addGUIElement for all GUI elements

GUI
---

* Added GUI.Link for handling links for external webs and files.
* Removed button url open
* Refactoring elements using a parent class GUI.Element

v0.6.3
======

InputAssistant
--------------

* Adding setCanvas method for binding mouse events to the canvas

Game
----

* Set canvas for InputAssistant

v0.6.2
======

GUI
---

* Added iFrame element. Loading url from block desc text.

v0.6.1
======

GUI
---

* Fixed bug when loading gui elements with desc image null.


v0.6
====

Game
----

* Added loading step before start game.
* Merged render and update loop. Using request animation frame method.
* Trigger event for collision group for both bodies. Ex: collision_bullets_asteroids.
* Trigger event for after update function.
* Added support for adding Scenes as objects.
* Delegate render and update to active scene.
* Removed assets_loaded event.
* Initialize scenes after loading assets.
* Map rendering removed for maintenance.
* Calling enter and exit scenes methods when switching.

Scene
-----

* Added Scene basic class.

RenderAssistant