@@ -57,6 +57,7 @@ define(function (require) {
         emitters[event.keyCode] = setInterval(function () {
             eventEmitter.trigger("keydown", event.keyCode);
         }, 1000 / 60);
+
         if (reservedKey(event.keyCode)) {
             dismissEvent(event);
         }
@@ -66,25 +67,21 @@ define(function (require) {
         keys[event.keyCode] = false;
         eventEmitter.trigger("keyup", event.keyCode);
         clearInterval(emitters[event.keyCode]);
-        dismissEvent(event);
     }
 
     function onmousemove(event) {
         mouse.x = event.clientX;
         mouse.y = event.clientY;
         eventEmitter.trigger("mousemotion", mouse);
-        dismissEvent(event);
     }
 
     function onmousedown(event) {
         mouse.buttons[event.button] = true;
         eventEmitter.trigger("mousedown", mouse);
-        dismissEvent(event);
     }
 
     function onmouseup(event) {
         mouse.buttons[event.button] = false;
-        dismissEvent(event);
     }
 
     // Register events callbacks
